fix(css): add underline to strong links for better visibility

--- a/main.css
+++ b/main.css
@@ -225,14 +225,14 @@ ol li strong {
 }
 
 ul li a strong {
-  @apply text-zt_purple hover:underline pb-0;
+  @apply text-zt_purple hover:underline pb-0 underline;
 }
 
 p a strong,
 h6 a strong,
 ol li a strong,
 ul li a strong {
-  @apply text-zt_purple hover:underline;
+  @apply text-zt_purple hover:underline underline;
 }
 
 img {
